[package]
name = "ch01-01"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ANCHOR: spin
spin = "0.7"
# ANCHOR_END: spin
# ANCHOR: downcast
downcast-rs = { version = "1.2.0", default-features = false }
# ANCHOR_END: downcast
